Created design for main and my publictaons page. Adding pictures for post

--- a/social_network/main/static/css/style.css
+++ b/social_network/main/static/css/style.css
@@ -1,61 +1,56 @@
 *{
-    overflow-y: auto;
-    scrollbar-width: none; 
+    scrollbar-width: none;  
 }
-
 .body{
-    padding-top: 16px;
-    padding-left: 80px;
-    padding-right: 80px;
+    padding-top: calc(0.5vw + 0.8vh);
+    padding-left: calc(2.7vw + 3.9vh);
+    padding-right: calc(2.7vw + 3.9vh);
     display: flex;
     justify-content: center;
-    gap: 5.66px;
+    gap: calc(0.2vw + 0.3vh);
 
 }
 .urls-frame{
-    width: 900px;
-    height: 40px;
+    width: calc(27.9vw + 38vh);
+    height: calc(1.4vw + 2vh);
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 24px;
+    gap: calc(0.8vw + 1.2vh);
 }
 .urls{
-    height: 28px;
+    width: calc(22.8vw + 33vh);
+    height: calc(1vw + 1.4vh);
     display: flex;
-    gap: 22px;
+    gap: calc(0.8vw + 1.1vh);
 }
 .url{
     display: flex;
-    padding: 4px 8px 4px 8px;
-    gap: 8px;
+    padding: calc(0.1vw + 0.2vw) calc(0.3vw + 0.4vh);
+    gap: calc(0.3vw + 0.4vh);
 }
 .url:hover{
     background-color: rgba(233, 229, 238, 1);
-    border-radius:3px ;
+    border-radius: calc(0.1vw + 0.15vw);
     cursor: pointer;
 }
 a{
-    height: 18px;
-    padding-top: 2px;
-    font-size: 16px;
+    height: calc(0.6vw + 0.9vh);
+    margin-top: calc(0.07vw + 0.1vh);
+    font-size: calc(0.5vw + 0.8vh);
     font-weight: 500;
-    line-height: 100%;
-    letter-spacing: -1%;
     color: rgba(7, 10, 28, 1);
-
-    font-weight: 600;
 }
 
 .button-exit{
-    width: 95px;
-    height: 40px;
-    border: 1px rgba(84, 60, 82, 1) solid;
+    width: calc(3.3vw + 4.7vh);
+    height: calc(1.4vw + 2vh);
+    border: calc(0.03vw + 0.05vh) rgba(84, 60, 82, 1) solid;
     border-radius: 1234px;
     display: flex;
     justify-content: center;
-    gap: 8px;
-    padding: 10px 16px 10px 16px;
+    gap: calc(0.3vw + 0.4vh);
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.8vh);
 }
 
 .exit{
@@ -67,233 +62,236 @@ a{
 }
 .main{
     background-color: rgba(233, 229, 238, 1);
-    border-radius:3px ;
+    border-radius: calc(0.1vw + 0.15vw);
 }
 
 .profile-frame{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: calc(0.3vw + 0.4vh);
 }
 
 .frame{
-    width: 350px;
+    width: calc(12.2vw + 17.2vh);
     background-color: white;
-    border: 1px rgba(205, 206, 210, 1) solid;
-    border-radius: 10px;
-    padding: 16px 16px;
+    border: calc(0.03vw + 0.05vh) rgba(205, 206, 210, 1) solid;
+    border-radius: calc(0.3vw + 0.5vh);
+    padding: calc(0.5vw + 0.8vh);
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 .avatar{
-    width: 96px;
-    height: 96px;
+    width: calc(3.3vw + 4.7vh);
+    height: calc(3.3vw + 4.7vh);
 
 }
 .my-avatar{
-    width: 96px;
-    height: 96px;
-    border-radius: 60px;
+    width: calc(3.3vw + 4.7vh);
+    height: calc(3.3vw + 4.7vh);
+    border-radius: calc(2vw + 3vh);
     z-index: 1;
 }
 .online-dot{
     position: absolute;
-    margin-right: 100px;
-    margin-top: 20px;
+    margin-right: calc(3.4vw + 4.9vh);
+    margin-top: calc(0.7vw + 1vh);
     transform: translate(-33px, 55px)
 }
 .nick-and-tag{
-    padding-top: 24px;
+    padding-top: calc(0.8vw + 1.2vh);
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: calc(0.3vw + 0.5vh);
     align-items: center;
 }
 
 .name{
-    font-size: 24px;
+    font-size: calc(0.8vw + 1.2vh);
     font-weight: 700;
     line-height: 100%;
 }
 .tag{
     font-weight: 500;
-    font-size: 16px;
+    font-size: calc(0.5vw + 0.8vh);
     line-height: 100%;
 }
 .subscribers{
-    padding-top: 16px;
+    padding-top: calc(0.5vw + 0.8vh);
     display: flex;
-    width: 350px;
-    height: 48px;
+    width: calc(12.2vw + 17.2vh);
+    height: calc(1.6vw + 2.4vh);
     justify-content: center;
+    overflow: visible;
+    white-space: nowrap;
 }
 
 .section{
-    width: 116px;
+    width: calc(4vw + 5.7vh);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-right: 1px rgba(205, 206, 210, 1) solid;
+    border-right: calc(0.03vw + 0.05vh) rgba(205, 206, 210, 1) solid;
+    overflow: visible;
+    white-space: nowrap;
 }
 
 .all-friends{
     border-right: 0px rgba(205, 206, 210, 1) solid;
 }
-.number{
-    font-size: 20px;
-    line-height: 100%;
+h1, h2, h3, h4, h5, h6 {
+    overflow: visible;
+    white-space: nowrap;
 }
+
+.number{
+    font-size: calc(0.7vw + 1vh);
+}   
 .info{
-    font-size: 16px;
-    line-height: 100%;
+    font-size: calc(0.5vw + 0.8vh);
     font-weight: 500;
-    color: rgba(129, 129, 141, 1)   ;
+    color: rgba(129, 129, 141, 1);
 }
 .icon-people{
-    width: 44px;
-    height: 44px;
+    width: calc(1.5vw + 2.2vh);
+    height: calc(1.5vw + 2.2vh);
 }
 .request{
-    height: 25vh;
-    padding-top: 18px;
+    height: calc(10vh + 8vw );
+    padding-top: calc(0.6vw + 0.9vh);
 }
 .message{
-    padding-top: 18px;
-    height: 25vh;
+    padding-top: calc(0.6vw + 0.9vh);
+    height: calc(10vh + 8vw);
 }
 .one-people:hover{
     background-color: rgba(233, 229, 238, 1);
-    border-radius: 10px;
+    border-radius: calc(0.3vw + 0.5vh);
     cursor: pointer;
 }
 .one-people{
-    height: 50px;
+    height: calc(1.7vw + 2.5vh);
     display: flex;
+    padding-top: calc(0.3vw + 0.5vh);
+    padding-bottom: calc(0.3vw + 0.5vh);
 }
 .title-frame{
-    height: 23px;
-    width: 318px;
+    height: calc(0.8vw + 1.1vh);
+    width: calc(11vw + 16vh);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 16px;
+    margin-bottom: calc(0.5vw + 0.8vh);
 }
 
 .logo-frame{
     display: flex;
-    gap: 8px;
+    gap: calc(0.3vw + 0.5vh);
     align-items: center;
 }
 .description-block{
     color: rgba(129, 129, 141, 1);
     font-weight: 500;
-    line-height: 100%;
-    font-size: 20px;
+    font-size: calc(0.7vw + 1vh);
 }
 .button-frame{
-    font-size: 16px;
+    font-size: calc(0.5vw + 0.8vh);
     line-height: 100%;
     color: rgba(84, 60, 82, 1);
     font-weight: 500;
 }
-
+.icon-people-request{
+    height: calc(0.7vw + 1vh);
+}
 .body-frame{
-    width: 318px;
+    width: calc(11vw + 15.6vh);
     display: flex;
+
     flex-direction: column;
-    height: 20vh;
-    overflow-y: scroll;
     scrollbar-width: none;  
     overflow-x: hidden;
 }
 .people-information{
     display: flex;
-    gap: 12px;
+    gap: calc(0.4vw + 0.6vh);
     align-items: center;
 }
 .friend-name{
-    font-size: 16px;
+    font-size: calc(0.5vw + 0.8vh);
     line-height: 100%;
 }
-.request-block{
-    width: 260px;
-}
+
 .subscribe{
     font-weight: 400;
-    font-size: 14px;
+    font-size: calc(0.5vw + 0.7vh);
     line-height: 100%;
     color: rgba(129, 129, 141, 1);
 }
 .people-name-and-subscribers{
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: calc(0.1vw + 0.2vh);
 }
 
 .people-name-and-time{
-    width: 240px;
+    width: calc(8.3vw + 11.8vh);
     display: flex;
     justify-content: space-between;
 }
 .time{
-    font-size: 12px;
+    font-size: calc(0.4vw + 0.6vh);
     font-weight: 400;
     color: rgba(129, 129, 141, 1);
 }
 .people-name-and-message{
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: calc(0.1vw + 0.2vh);
 }
 .message-friend{
-    font-size: 14px;
-    line-height: 160%;
+    font-size: calc(0.48vw + 0.68vh);
     font-weight: 400;
     color: rgba(7, 10, 28, 1);
 }
 .body-page{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: calc(0.3vw + 0.5vh);
 }
 .chat-input{
-    width: 923px;
-    height: 120px;
+    width: calc(32vw + 45.2vh);
+    height: calc(4.1vw + 5.9vh);
     background-color: white;
-    padding: 16px;
-    border: 1px rgba(205, 206, 210, 1) solid;
-    border-radius: 10px;
+    padding: calc(0.5vw + 0.8vh);
+    border: calc(0.03vw + 0.05vh) rgba(205, 206, 210, 1) solid;
+    border-radius: calc(0.3vw + 0.5vh);
     text-align: center;
 }
 .inputs{
-    width: 891px;
-    height: 88px;
+    width: calc(31vw + 43.7vh);
+    height: calc(3vw + 4.3vh);
     display: flex;
     flex-direction: column;
-    gap: 26px;
+    gap: calc(0.9vw + 1.3vh);
 }
 .post-message{
-    width: 891px;
+    width: calc(31vw + 43.7vh);
     border: none;
     outline: none;
+    font-size: calc(0.5vw + 0.8vh);
 }
 
 .image-to-post{
-    width: 40px;
-    height: 40px;   
+    width: calc(1.4vw + 2vh);
+    height: calc(1.4vw + 2vh); 
     background-color: white;
 }
-
-
-
 .inputs-photo-emoji{
     display: flex;
-    padding-left: 655px;
-    gap: 13px;
+    padding-left: calc(20vw + 30vh);
+    gap: calc(0.48vw + 0.68vh);
 }
 .image-icon:hover{
     background-color: rgba(233, 229, 238, 1);
@@ -303,124 +301,195 @@ a{
 
 .button-upload{
     display: flex;
-    width: 130px;
-    height: 40px;
+    width: calc(6.6vw + 9.3vh);
+    height: calc(1.4vw + 2vh);
     background-color: rgba(84, 60, 82, 1);
     border-radius: 1234px;
     justify-content: center;
+    padding: calc(0.3vw + 0.5vh) calc(0.5vw + 0.8vh);
     align-items: center;    
-    gap: 8px;
+    gap: calc(0.3vw + 0.5vh);
+    border:none;
+    font-size: calc(0.5vw + 0.8vh);
 }
 .upload-title{
     color: white;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: calc(0.48vw + 0.68vh);
 }
 .button-upload:hover{
     cursor: pointer;
     background-color: rgb(71, 51, 69);
 }
+.hidden-input .image-icon{
+    width: calc(1.4vw + 2vh);
+    height: calc(1.4vw + 2vh);
+}
 .social-media-post{
     background-color: white;
-    width: 923px;
-    border-radius: 10px;
+    width: calc(32vw + 45.2vh);
+    border-radius: calc(0.3vw + 0.5vh);
     display: flex;
     flex-direction: column;
 }
 
 .people-information-post{
-    height: 89px;
+    height: calc(3.1vw + 4.4vh);
     display: flex; 
-    padding: 20px;
+    padding: calc(0.7vw + 1vh);
     justify-content: space-between;
     align-items: center;
 }
 .people-logo-and-nick{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: calc(0.7vw + 1vh);
 }
 .post-friend-avatar{
-    width: 46px;
-    height: 46px;
-}
-.online-dot-post{
-    width: 12px;
-    height: 12px;
-    position: absolute;
-    margin-right: 100px;
-    margin-top: 20px;
-    transform: translate(-15px, 15px)
+    width: calc(1.6vw + 2.6vh);
+    height: calc(1.6vw + 2.6vh);
 }
 
 .nick-friend{
-    font-size: 14px;
+    font-size: calc(0.5vw + 0.8vh);
     font-weight: 500;
-    line-height: 20px;
     color: rgba(7, 10, 28, 1);
 }
 .dot{
-    padding-bottom: 20px;
+    padding-bottom: calc(0.7vw + 1vh);
+    width: calc(0.7vw + 1vh);
 }
 .body-post{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding: 0px 20px 16px 20px;
+    padding: 0px calc(0.7vw + 1vh) calc(0.5vw + 0.8vh) calc(0.7vw + 1vh);
     flex-direction: column;
+    gap: calc(0.5vw + 0.8vh);
 }
 
 .description-post{
-    font-size: 16px;
+    font-size: calc(0.5vw + 0.8vh);
     font-weight: 400;
-    line-height: 100%;
 }
 
 .likes{
-    font-size: 14px;
+    font-size: calc(0.5vw + 0.8vh);
     font-weight: 400;
-    line-height: 20px;
 }
 .reviews{
     display: flex;
-    gap: 24px;
+    padding-top: calc(0.5vw + 0.8vh);
+    gap: calc(0.8vw + 1.2vh);
 }
 .review{
     display: flex;
-    gap: 8px;
+    gap: calc(0.3vw + 0.5vh);
+    align-items: center;
 }
 
 .posts {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: calc(0.3vw + 0.5vh);
 
 }
 
 .posts-wrapper{
-    max-height: 68vh;
+    max-height: calc(20.3vw + 28.7vh);
     overflow-y: auto;
     scrollbar-width: none; 
 }
 
 .title-post{
-    font-size: 16px;
+    font-size: calc(0.5vw + 0.8vh);
     font-weight: 500;
-    margin-bottom: 16px;
 }
 
 .hashtags{
     display: flex;
-    gap: 5px;
+    gap: calc(0.2vw + 0.3vh);
     flex-wrap: wrap;
-    width: 638px;
+    width: calc(22.2vw + 31.3vh);
+    color: rgba(84, 60, 82, 1);
 }
 .hashtag{
-    font-size: 16px;
+    font-size:calc(0.5vw + 0.8vh);
     font-weight: 400;
 }
-
+.likes-icon{
+    width: calc(0.7vw + 1vh);
+    height: calc(0.7vw + 1vh);
+}
+.photos{
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(30.7vw + 43.4vh);
+    gap: calc(0.5vw + 0.8vh);
+}
+.image{
+    border-radius: calc(0.5vw + 0.8vh);
+}
+.photos-1 {
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);
+}
+.photos-2{
+    width: calc(15vw + 21.2vh);
+    height: calc(11.4vw + 16vh);
+}
+.photos-3{
+    width: calc(15vw + 21.2vh);
+    height: calc(11.4vw + 16vh);
+}
+.photos-3.number-3{
+    width: calc(30.7vw + 43.4vh);
+    height: calc(11.4vw + 16vh);
+}
+.image.photos-4 {
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);    
+}
+.photos-5{    
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);    
+}
+.photos-5.number-1 {
+    width: calc(15vw + 21.2vh);
+    height: calc(11.4vw + 16vh);
+}
+ .photos-5.number-2{
+    width: calc(15vw + 21.2vh);
+    height: calc(11.4vw + 16vh);
+ }
+.photos-6{
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);    
+}
+.photos-7{
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);  
+}
+.photos-7.number-7{
+    width: calc(30.7vw + 43.4vh);
+    height: calc(11.4vw + 16vh);
+}
+.photos-8{
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);  
+}
+.photos-8.number-7{
+    width: calc(15vw + 21.2vh);
+    height: calc(11.4vw + 16vh);
+}
+.photos-8.number-8{
+    width: calc(15vw + 21.2vh);
+    height: calc(11.4vw + 16vh);
+}
+.photos-9{
+    width: calc(9.8vw + 13.9vh);
+    height: calc(11.4vw + 16vh);  
+}
 .form{
     width: 773px;
     height: 587px;
@@ -470,7 +539,7 @@ input{
     color: red;
 }
 .post-message{
-    height: 22px;
+    height: calc(0.8vw + 1.1vh);
 }
 textarea{
     height: 82px;
@@ -588,4 +657,12 @@ textarea{
 }
 a{
     text-decoration: none;
+}
+.url-post{
+    font-weight: 400;
+    color: rgba(84, 60, 82, 1);
+    font-size: calc(0.5vw + 0.8vh);
+}
+.url-post:hover{
+    text-decoration: underline;
 }
